[gd_scene load_steps=10 format=3 uid="uid://bgame001"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_game"]
[ext_resource type="PackedScene" uid="uid://btray001" path="res://scenes/props/tray.tscn" id="2_tray"]
[ext_resource type="PackedScene" uid="uid://bcup001" path="res://scenes/props/dice_cup.tscn" id="3_cup"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial1"]
sky_top_color = Color(0.38, 0.55, 0.72, 1)
sky_horizon_color = Color(0.78, 0.82, 0.9, 1)
ground_bottom_color = Color(0.2, 0.17, 0.15, 1)
ground_horizon_color = Color(0.45, 0.4, 0.35, 1)

[sub_resource type="Sky" id="Sky1"]
sky_material = SubResource("ProceduralSkyMaterial1")

[sub_resource type="Environment" id="Environment1"]
background_mode = 3
background_color = Color(0.3, 0.5, 0.85, 1)
ambient_light_source = 2
ambient_light_color = Color(0.7, 0.7, 0.75, 1)
tonemap_mode = 0

[sub_resource type="WorldEnvironment" id="WorldEnvironment1"]
environment = SubResource("Environment1")

[sub_resource type="StandardMaterial3D" id="FloorMat"]
albedo_color = Color(0.55, 0.35, 0.2, 1)

[node name="Game" type="Node3D"]
script = ExtResource("1_game")

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.03, 0)
use_collision = false
size = Vector3(2, 0.02, 2)
material = SubResource("FloorMat")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("WorldEnvironment1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.354, 0.354, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 2, 4, 2)
rotation = Vector3(-0.785398, 0.523599, 0)
light_energy = 1.2
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
current = true
transform = Transform3D(0.866, -0.25, 0.433, 0, 0.866, -0.5, -0.5, 0.433, 0.75, 0, 0.28, 0.45)
fov = 60.0

[node name="Tray" parent="." instance=ExtResource("2_tray")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="DiceCup" parent="." instance=ExtResource("3_cup")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0.08, 0.05)

[node name="DiceContainer" type="Node3D" parent="."]

[node name="ContentContainer" type="Node3D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIControl" type="Control" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/UIControl"]
text = "Oh no! My Boyfriend is Haunted"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.9, 0.2, 0.3, 1)
theme_override_font_sizes/font_size = 28
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -180.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 45.0
grow_horizontal = 2

[node name="ResearchLabel" type="Label" parent="CanvasLayer/UIControl"]
text = "Research: 0"
theme_override_font_sizes/font_size = 20
anchor_left = 1.0
anchor_right = 1.0
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -180.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 45.0
grow_horizontal = 0

[node name="RollButton" type="Button" parent="CanvasLayer/UIControl"]
text = "Roll Dice"
theme_override_font_sizes/font_size = 20
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -60.0
offset_right = 70.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResetButton" type="Button" parent="CanvasLayer/UIControl"]
text = "Reset"
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 20.0
offset_right = -5.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="TubeShopBtn" type="Button" parent="CanvasLayer/UIControl"]
text = "Tube Shop"
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = 20.0
offset_right = 95.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="OpenTubeBtn" type="Button" parent="CanvasLayer/UIControl"]
text = "Open Tube"
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 65.0
offset_right = -10.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="HintLabel" type="Label" parent="CanvasLayer/UIControl"]
text = "Roll Dice â†’ earn Research â†’ Tube Shop â†’ Open Tube"
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = 105.0
offset_right = 170.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="TubeCountLabel" type="Label" parent="CanvasLayer/UIControl"]
text = "Tubes: 0 | Allies: 0"
theme_override_font_sizes/font_size = 14
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 65.0
offset_right = 90.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShopPanel" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ShopPanel"]
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/ShopPanel/MarginContainer"]

[node name="ShopTitle" type="Label" parent="CanvasLayer/ShopPanel/MarginContainer/VBox"]
text = "ðŸ§ª Tube Shop"
theme_override_font_sizes/font_size = 24

[node name="ShopSubtitle" type="Label" parent="CanvasLayer/ShopPanel/MarginContainer/VBox"]
text = "Buy tubes with Research. Open them to get dice & allies!"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="TubesGrid" type="GridContainer" parent="CanvasLayer/ShopPanel/MarginContainer/VBox"]
columns = 1

[node name="CloseBtn" type="Button" parent="CanvasLayer/ShopPanel/MarginContainer/VBox"]
text = "Close"
